Finished implementation of for and for each loops in hand written parser